# pippa_theory

./: .gitignore  README.md  README_pippa.md  Theory_Pippa_gravity.md  pyproject.toml  requirements-dev.txt  requirements.txt  verify_corrected_formulas.py  verify_particle_masses.py  verify_predictions.py
docs/: Theory_Pippa.md
pippa/: __init__.py  constants.py  cosmology.py  cosmology_alpha_corrected.py  covariant_action.py  dark_matter.py  electroweak.py  fractal_dimension.py  gravity.py  particle_physics.py  renormalization.py  sparc.py  verification.py
pippa_tests/: README.md  einstein_equation_verification.py  fine_structure_constant_verification.py  fractal_dimension_verification.py  modes_equation_verification.py  particle_mass_verification.py  run_all_verifications.py  toy_model_pippa.py
tests/: all_in_one.py  test_covariant_action.py  test_dimension.py  test_lorentz.py  test_pippa.py  test_sparc.py
